--- a/idempotent-demo/pom.xml
+++ b/idempotent-demo/pom.xml
@@ -49,9 +49,9 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>com.wangji92.springboot</groupId>
+            <groupId>com.github.WangJi92</groupId>
             <artifactId>idempotent-spring-boot-starter</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
+            <version>0.0.1</version>
         </dependency>
     </dependencies>
 
