--- a/idempotent-demo/src/main/resources/application.properties
+++ b/idempotent-demo/src/main/resources/application.properties
@@ -2,3 +2,19 @@ spring.redis.host=127.0.0.1
 spring.redis.port=6379
 server.port=8080
 logging.level.com.wangji92=debug
+
+# 自动配置 非手动配置 拦截器
+spring.idempotent.manual-setting-idempotent-interceptor=false
+# 拦截器的order 位置
+spring.idempotent.idempotent-interceptor-order-value=500
+# 拦截的url
+spring.idempotent.include-urls=/**
+# 不进行拦截的url
+spring.idempotent.exclude-urls=/wangji,/wangji2
+
+# com.wangji92.springboot.idempotent.keygen.iml.DefaultLockKeyResolver 默认先找header 然后找 cookie 最后sessionId
+# 根据配置的key 去查找
+# 随便写一个 cookie
+spring.idempotent.default-lock-key-cookie-name=SESSION_ID
+# 随便找一个 user-agent
+spring.idempotent.default-lock-key-http-header-name=user-agent
