--- a/idempotent-demo/src/main/resources/application.properties
+++ b/idempotent-demo/src/main/resources/application.properties
@@ -3,14 +3,17 @@ spring.redis.port=6379
 server.port=8080
 logging.level.com.wangji92=debug
 
-# 自动配置 非手动配置 拦截器
+# 自动配置(自动将拦截器注册到webconfig) 非手动配置 拦截器
 spring.idempotent.manual-setting-idempotent-interceptor=false
-# 拦截器的order 位置
+
+# 拦截器的order 位置(比如先要校验登录权限 这个order 设置靠后一点)
 spring.idempotent.idempotent-interceptor-order-value=500
+
 # 拦截的url
 spring.idempotent.include-urls=/**
 # 不进行拦截的url
 spring.idempotent.exclude-urls=/wangji,/wangji2
+
 
 # com.wangji92.springboot.idempotent.keygen.iml.DefaultLockKeyResolver 默认先找header 然后找 cookie 最后sessionId
 # 根据配置的key 去查找
