--- a/idempotent-demo/pom.xml
+++ b/idempotent-demo/pom.xml
@@ -50,7 +50,7 @@
         <dependency>
             <groupId>com.github.WangJi92</groupId>
             <artifactId>idempotent-spring-boot-starter</artifactId>
-            <version>0.0.2-SNAPSHOT</version>
+            <version>0.0.3</version>
         </dependency>
     </dependencies>
 
